<resources>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开加载</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">加载更多</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">咕咚Rom</string>
    <string name="action_exit">退出</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="logining">登录中&#8230;</string>
    <string name="welcome">欢迎</string>
    <string name="login_failed">登录失败, 请尝试重新登录</string>
    <string name="failed_enable_bt">蓝牙未打开!</string>
    <string name="search_bracelet">搜索小米手环</string>
    <string name="connect_bracelet_now">连接中, 请稍候&#8230;</string>
    <string name="firmware_upgrade">固件升级</string>
    <string name="bracelet_info_fw_version">"固件：%1$s
协议：%2$s"</string>
    <string name="bracelet_info_mac_address">"名称：%1$s
地址：%2$s"</string>
    <string name="bracelet_info_deviceid">%s</string>
    <string name="bracelet_info_battery">%s%%</string>
    <string name="app_info_version">"版本:%1$s
协议：%2$s"</string>
    <string name="description_list_icon">Item Icon</string>
    <string name="date_today">今天</string>
    <string name="date_yesterday">昨天</string>
    <string name="date_this_week">本周</string>
    <string name="date_last_week">上周</string>
    <string name="date_this_month">本月</string>
    <string name="date_last_month">上月</string>
    <string name="date_from_to">%1$s至%2$s</string>
    <string name="date_from_to_short">%1$s-%2$s</string>
    <string name="date_month_day">%1$d月%2$d日</string>
    <string name="date_year_month_day">%1$d年%2$d月%3$d日</string>
    <string name="date_month_day_short">%1$d/%2$d</string>
    <string name="date_month_day_week">%1$d月%2$d日 %3$s</string>
    <string name="date_month_day_week_short">%1$d.%2$d %3$s</string>
    <string name="date_month">%1$d月</string>
    <string name="date_year_month">%1$d年%2$d月</string>
    <string name="network_error">没有网络连接, 请先连接网络！</string>
    <string name="prev_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="cancel">取消</string>
    <string name="accept">同意</string>
    <string name="set_sport_goal">设定运动目标</string>
    <string name="alarm_once">只响一次</string>
    <string name="goals_push_none">不推送</string>
    <string name="goals_push_five">完成50%目标时推送</string>
    <string name="goals_push_nine">完成90%目标时推送</string>
    <string name="goals_push_ten">完成100%目标时推送</string>
    <string name="friends_search_tips">小米ID/昵称/手机号</string>
    <string name="friends_search">搜索</string>
    <string name="friends_invite2">邀请</string>
    <string name="statistic_total">总计</string>
    <string name="statistic_day_average">日均</string>
    <string name="statistic_detail">详情</string>
    <string name="day_active_detail">每日详情</string>
    <string name="alarm">闹钟</string>
    <string name="unlock_screen">屏幕解锁</string>
    <string name="about">关于</string>
    <string name="about_copyright" />
    <string name="unit_kilometer">公里</string>
    <string name="unit_meter">米</string>
    <string name="unit_calorie">千卡</string>
    <string name="unit_step">步</string>
    <string name="unit_hour">小时</string>
    <string name="unit_min">分钟</string>
    <string name="unit_min_short">分</string>
    <string name="upgrade_tip">更新提示</string>
    <string name="hot_des">热量</string>
    <string name="noti_bracelet_low_battery_title">手环电量低</string>
    <string name="noti_bracelet_low_battery_content">手环电量不足5%, 请及时充电</string>
    <string name="noti_bracelet_low_battery_title_none">手环已关机</string>
    <string name="noti_bracelet_low_battery_content_none">手环电池已耗尽, 请充电</string>
    <string name="bt_operation_failed_tips">蓝牙连接异常, 请稍后重试！</string>
    <string name="multi_devices_info">你的附近可能有多个小米手环。请尝试将你的手环贴近手机并离开其他的手环10米以外再重新搜索</string>
    <string name="multi_devices_title">无法绑定</string>
    <string name="search_bracelet_again">重新搜索</string>
    <string name="search_devices_info">请将手环佩戴到手腕上，并靠近手机</string>
    <string name="search_bracelet_ok">找到一个手环！</string>
    <string name="found_bracelet_info">当手环上的蓝灯闪烁时, 敲击几下手环来绑定</string>
    <string name="bind_bracelet_ok">手环已绑定成功</string>
    <string name="device_not_response">我的手环怎么没亮灯？</string>
    <string name="action_local_ota">SD卡升级</string>
    <string name="bracelet_not_found_title">请先充电</string>
    <string name="bracelet_not_found_info">当手环上有一颗灯常亮时, 尝试重新搜索</string>
    <string name="get_help">获取帮助</string>
    <string name="system_not_support_title">无法支持</string>
    <string name="system_not_support_info">"你的手机系统版本过低, 无法使用小米手环, 
小米手环需要安卓4.4及以上版本。"</string>
    <string name="system_low_title">系统版本较低</string>
    <string name="system_low_info">你的手机使用的是安卓4.3系统, 运行小米手环App可能会有部分兼容性问题, 建议尽快升级到安卓4.4及以上系统</string>
    <string name="bind_bracelet">发现小米手环</string>
    <string name="bracelet_login_title">欢迎使用小米手环</string>
    <string name="bracelet_login_info">登录后将使用小米云智能分析你的活动和睡眠情况给出科学的建议</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="cm">厘米</string>
    <string name="congrats">恭喜</string>
    <string name="start_use">开始使用</string>
    <string name="share">分享</string>
    <string name="person_info_finished_info">手环设置成功</string>
    <string name="kg">公斤</string>
    <string name="new_friend_cancel">拒绝</string>
    <string name="new_friend_accept">同意</string>
    <string name="search_devices_title">搜索手环</string>
    <string name="share_blog_cancel">取消</string>
    <string name="share_blog_title">发布动态</string>
    <string name="share_blog_share">发布</string>
    <string name="share_blog_message_hint">说点什么吧...</string>
    <string name="share_blog_other">同步分享到</string>
    <string name="share_blog_weixin">微信</string>
    <string name="share_blog_pengyouquan">朋友圈</string>
    <string name="share_blog_qq_zone">QQ空间</string>
    <string name="share_blog_qq">QQ</string>
    <string name="share_blog_weibo">微博</string>
    <string name="distance">里程</string>
    <string name="points_exchange">积分兑换</string>
    <string name="odo">总里程数</string>
    <string name="daily_sporty">日均步数</string>
    <string name="unknown_location">未定位</string>
    <string name="km">公里</string>
    <string name="cal">千卡</string>
    <string name="step">步</string>
    <string name="point">分</string>
    <string name="unknown_mili">我的</string>
    <string name="s_mili">的手环</string>
    <string name="rename_mili">命名手环</string>
    <string name="reset_mili">重置手环</string>
    <string name="bind_new_mili">绑定新手环</string>
    <string name="unbind_mili">解除绑定</string>
    <string name="smart_alarm_clock">智能闹钟</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_1">退出登录？</string>
    <string name="exit_app">退出</string>
    <string name="exit_app_continue">继续退出</string>
    <string name="exit_app_tips">"确定完全退出小米手环？
退出后将会断开与设备的连接。"</string>
    <string name="set_mili_name">设置手环名称</string>
    <string name="mili_name">手环名称</string>
    <string name="set_mili_name_ok">设置手环名OK</string>
    <string name="set_mili_name_fail">设置手环名称失败</string>
    <string name="mili_name_too_long">输入名称过长, 请缩短后再试</string>
    <string name="mili_rename_fail">手环重命名失败</string>
    <string name="mili_unbind_question">解除绑定后, 手机将无法获取手环内的信息</string>
    <string name="share_to_title">咕咚Rom</string>
    <string name="share_to_content">小米手环运动分享</string>
    <string name="share_goal_tips_succ">"再伟大的目标
也是一步一步走出来的"</string>
    <string name="share_goal_tips_fail">革命尚未成功, 足下仍需努力</string>
    <string name="person_info_goal_info">根据世界卫生组织的建议, 你每天需要进行中等强度的运动40分钟, 相当于快走8000步</string>
    <string name="person_info_goal_info_young">根据世界卫生组织的建议, 你每天需要进行中等强度的运动60分钟, 相当于快走12000步</string>
    <string name="set_person_goal">目标设定</string>
    <string name="feedback">意见反馈</string>
    <string name="smart_wake_up">智能唤醒</string>
    <string name="smart_wake_up_info">"允许闹钟在目标唤醒时间之前30分钟内
将我从浅度睡眠中唤醒, 让我更轻松的起床"</string>
    <string name="alarm_cycle">闹钟周期</string>
    <string name="login_failed_check_sys_time">登录失败, 请检查时间设置, 并使用网络提供的时间</string>
    <string name="everyday">每天</string>
    <string name="mon_fri">周一至周五</string>
    <string name="mon_sat">周一至周六</string>
    <string name="device_not_found_not_knocked">蓝灯闪烁时没有敲击手环, 请重新搜索</string>
    <string name="statistic">统计</string>
    <string name="mili_unbind_question_content">解除绑定后, 可以使用其他手机连接手环, 或更换新手环。</string>
    <string name="mili_unbind_question_content_1">如果你已设置使用该手环来进行手机解锁, 解除绑定后将无法继续使用该功能。</string>
    <string name="mili_reset_info">"将清除手环上的所有信息, 并恢复到出厂状态
确认重置？"</string>
    <string name="mili_exit_login_info">"退出当前登录的小米账号
确定继续？"</string>
    <string name="mili_exit_login_info_continue">"同步失败，请检查网络连接，
继续退出会丢失未同步的数据，是否退出？"</string>
    <string name="modify_signiture">修改签名</string>
    <string name="modify_signiture_hint">个性签名</string>
    <string name="modify_nickname">修改姓名</string>
    <string name="personal_info">个人信息</string>
    <string name="confirm">确定</string>
    <string name="stat_steps">步数</string>
    <string name="stat_steps_active_time">活动时长</string>
    <string name="stat_steps_consecutive_active">最长活动</string>
    <string name="stat_steps_achievement">完成度</string>
    <string name="stat_step_total">总计步数</string>
    <string name="stat_step_distance_total">总计里程</string>
    <string name="stat_step_calorie_total">总计消耗</string>
    <string name="stat_step_walk">行走时长</string>
    <string name="stat_step_run">跑步时长</string>
    <string name="stat_step_daily">全天步数</string>
    <string name="stat_step_distance_daily">全天里程</string>
    <string name="stat_step_calorie_daily">全天消耗</string>
    <string name="stat_step_active_total">总计活动</string>
    <string name="stat_step_walk_total">总计行走</string>
    <string name="stat_step_run_total">总计跑步</string>
    <string name="stat_step_average">日均步数</string>
    <string name="help_info_3">如果你的手环已经和其他手机绑定, 并且绑定的手机不在手环附近, 这时你需要关闭已绑定手机的蓝牙, 然后重新使用新手机搜索手环</string>
    <string name="fw_failed_help_title">固件升级FAQ</string>
    <string name="fw_failed_help_title0">什么是固件？</string>
    <string name="fw_failed_help_tips0">固件是运行在小米手环中的软件系统, 负责让小米手环运转起来。</string>
    <string name="fw_failed_help_title1">为什么要升级固件？</string>
    <string name="fw_failed_help_tips1">升级固件可以优化手环本身的性能, 同时也会配合相应的新功能提供支持。如果固件版本较低, 有可能导致手环的某些功能无法正常使用。</string>
    <string name="fw_failed_help_title2">我升级失败了怎么办？</string>
    <string name="fw_failed_help_tips2">请首先确保手环电量不低于5%。在升级过程中, 不要断开手环和手机的连接。</string>
    <string name="action_pop_weixin_enter">微信接入</string>
    <string name="look_device_list">查看附近手环</string>
    <string name="bind_weixin_title">点击“微信接入“将生成二维码并保存到本地相册中，启动微信后使用扫一扫中的相册功能扫描二维码，扫描后即可关注小米手环公众号，在微信中查看好友排行榜。</string>
    <string name="bind_weixin_tips">也可以使用电脑访问&lt;font color=blue>http://hm.xiaomi.com/login.do&lt;/font>获取二维码后, 使用当前手机启动微信进行扫描绑定</string>
    <string name="ui_welcome_version">咕咚刷V1.0</string>
    <string name="ui_relationOur">联系我们</string>
    <string name="ui_upgradeROM">刷ROM</string>
    <string name="ui_taste_now">现在就去体验咕咚ROM手环</string>
    <string name="ui_taste_first">1.打开[咕咚]App</string>
    <string name="ui_taste_second">2.进入[我]>>[配件]>>[绑定配件]>>[咕咚ROM手环]>>[小米手环]，绑定手环</string>
    <string name="ui_taste_down_first">1.下载[咕咚]App</string>
    <string name="ui_taste_down_second">2.打开并登录[咕咚]App</string>
    <string name="ui_taste_down_third">3.进入[我]>>[配件]>>[绑定配件]>>[咕咚ROM手环]>>[小米手环]，绑定手环</string>
    <string name="ui_input_codoon">进入[咕咚]</string>
    <string name="ui_download_codoon">下载[咕咚]</string>
    <string name="ui_relation_our_user">rom@codoon.com</string>
    <string name="ui_relation_our_user_title">用户反馈：</string>
    <string name="ui_relation_our_business_title">商务合作：</string>
    <string name="ui_relation_our_business">mkt@codoon.com</string>
    <string name="upgrade_success">升级成功！</string>
</resources>