<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/topStyle" >

        <Button style="@style/uiBackButton" />

        <TextView
            style="@style/titleText"
            android:text="@string/ui_upgradeROM" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp" >

        <TextView
            android:id="@+id/tv_upgrade_downapp_success_hint"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#f1d19f"
            android:gravity="center"
            android:text="@string/upgrade_success"
            android:textColor="#ba7e31"
            android:textSize="14sp"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dip"
        android:gravity="center_horizontal"
        android:text="@string/ui_taste_now"
        android:textColor="@color/ui_relation_our_text_1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginTop="36dip"
        android:text="@string/ui_taste_down_first"
        android:textColor="@color/ui_relation_our_text_2"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginTop="20dip"
        android:text="@string/ui_taste_down_second"
        android:textColor="@color/ui_relation_our_text_2"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dip"
        android:text="@string/ui_taste_down_third"
        android:textColor="@color/ui_relation_our_text_2"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_download_codoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="100dip"
        android:background="@drawable/btn_bg_selector"
        android:onClick="downloadCodoon"
        android:text="@string/ui_download_codoon"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

</LinearLayout>