<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color_blue"
    android:orientation="vertical"
    android:padding="@dimen/mili_margin" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@id/fw_help_back_btn"
            android:layout_width="40.0dip"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back_bg" />

        <TextView
            android:id="@id/fw_help_back_txt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/fw_failed_help_title"
            android:textColor="@color/title_color"
            android:textSize="@dimen/click_button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/mili_margin"
        android:paddingRight="@dimen/mili_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/mili_margin"
            android:paddingTop="@dimen/mili_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/fw_failed_help_title0"
                android:textColor="@color/title_color"
                android:textSize="@dimen/click_button_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:text="@string/fw_failed_help_tips0"
                android:textColor="@color/content_color"
                android:textSize="@dimen/info_content_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/fw_failed_help_title1"
                android:textColor="@color/title_color"
                android:textSize="@dimen/click_button_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:text="@string/fw_failed_help_tips1"
                android:textColor="@color/content_color"
                android:textSize="@dimen/info_content_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30.0dip"
            android:orientation="vertical"
            android:paddingTop="@dimen/mili_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/fw_failed_help_title2"
                android:textColor="@color/title_color"
                android:textSize="@dimen/click_button_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:text="@string/fw_failed_help_tips2"
                android:textColor="@color/content_color"
                android:textSize="@dimen/info_content_size" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/split_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/mili_margin"
        android:paddingRight="@dimen/mili_margin"
        android:paddingTop="10.0dip"
        android:text="@string/help_info_3"
        android:textColor="@color/content_color"
        android:textSize="@dimen/info_content_size" />

</LinearLayout>