<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/main_ui_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/bind_weixin_home_back" android:background="@color/bg_color_blue" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_h" android:text="@string/action_pop_weixin_enter" style="@style/BackButton" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/mili_margin" android:paddingRight="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_below="@id/bind_weixin_home_back">
        <TextView android:textSize="11.799988sp" android:textColor="@color/main_ui_content_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bind_weixin_title" />
        <ImageView android:id="@id/bind_weixin_help_iv" android:background="@drawable/bind_weixin_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="70.0dip" android:layout_marginTop="25.0dip" android:contentDescription="@string/app_name" />
        <TextView android:textSize="15.0sp" android:textColor="@color/main_ui_content_color" android:id="@id/bind_weixin_tips_tv" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/bind_weixin_tips" />
    </LinearLayout>
    <Button android:textSize="@dimen/click_button_text_size" android:textColor="@color/main_ui_content_color" android:layout_gravity="center_horizontal" android:id="@id/bind_weixin_btn" android:background="@drawable/click_btn_bg_3" android:layout_width="@dimen/click_button_w" android:layout_height="@dimen/click_button_h" android:layout_marginBottom="30.0dip" android:text="@string/action_pop_weixin_enter" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>